[gd_scene load_steps=21 format=2]

[ext_resource path="res://varliklar/paralax/sky.png" type="Texture" id=1]
[ext_resource path="res://varliklar/paralax/middle.png" type="Texture" id=2]
[ext_resource path="res://varliklar/paralax/fore2.png" type="Texture" id=3]
[ext_resource path="res://varliklar/paralax/middle2.png" type="Texture" id=4]
[ext_resource path="res://varliklar/paralax/fore.png" type="Texture" id=5]
[ext_resource path="res://sahneler/player/Alisa.tscn" type="PackedScene" id=6]
[ext_resource path="res://varliklar/cizimler/antogonist_hit.png" type="Texture" id=7]
[ext_resource path="res://varliklar/cizimler/antogonist_walk.png" type="Texture" id=8]
[ext_resource path="res://varliklar/cizimler/bu_benim_oykum.png" type="Texture" id=9]
[ext_resource path="res://sahneler/oyun/ev_ile_etkiles.gd" type="Script" id=10]
[ext_resource path="res://sahneler/sahne_gecis_sahnesi/Sahnegecisi.tscn" type="PackedScene" id=11]
[ext_resource path="res://varliklar/cizimler/sag_ev_ds_yeni.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 679, 16.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 109.688, 25.5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Tokad_yeme_anim/AntogonistHit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Alisa:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tokad_yeme_anim/AntogonistHit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Tokad_yeme_anim/AntogonistWalk:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Tokad_yeme_anim/AntogonistWalk:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 184, 104 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "tokad_ye"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath("Tokad_yeme_anim/AntogonistHit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Alisa:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 3.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tokad_yeme_anim/AntogonistHit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Alisa")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 6.7, 7.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "hareket_izni"
}, {
"args": [ false ],
"method": "hareket_izni"
}, {
"args": [ true ],
"method": "hareket_izni"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Tokad_yeme_anim/AntogonistWalk:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 3.4, 7.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Tokad_yeme_anim/AntogonistWalk:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 3.4, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 184, 104 ), Vector2( 184, 104 ), Vector2( 547, 104 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Alisa:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 145.949, 113.777 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "animasyon"
length = 13.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 2.5, 2.6, 2.7, 2.8, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 7.5, 7.6, 7.7, 7.8, 7.9, 8, 8.1, 8.2, 8.3, 8.4, 8.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Alisa:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1.4, 7.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 982.22, 113.777 ), Vector2( 1101.91, 89.2088 ), Vector2( 987.878, 106.136 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Alisa:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../ev_ile_etkiles/SagEvDsYeni:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../../CanvasLayer/Sahnegecisi")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 12.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://sahneler/oyun/Sahne7.tscn" ],
"method": "sahneye_git"
} ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 30.0386, 51.4412 )

[node name="Sahne6" type="Node"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_offset = Vector2( 599.026, 0 )
motion_mirroring = Vector2( 599.026, 0 )

[node name="Fore" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 1 )

[node name="Fore2" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 1198.05, 0 )
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 1 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )
motion_offset = Vector2( 599.026, 0 )
motion_mirroring = Vector2( 599.026, 0 )

[node name="Fore" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 2 )

[node name="Fore2" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 1198.05, 0 )
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_offset = Vector2( 599.026, 0 )
motion_mirroring = Vector2( 599.026, 0 )

[node name="Fore" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 5 )

[node name="Fore2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1198.05, 0 )
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_offset = Vector2( 599.026, 0 )
motion_mirroring = Vector2( 599.026, 0 )

[node name="Fore" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 3 )

[node name="Fore2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1198.05, 0 )
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 3 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_offset = Vector2( 599.026, 0 )
motion_mirroring = Vector2( 599.026, 0 )

[node name="Fore" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 4 )

[node name="Fore2" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 1198.05, 0 )
scale = Vector2( 2.88, 2.787 )
texture = ExtResource( 4 )

[node name="seviye" type="Node2D" parent="."]

[node name="duvarlar" type="Node2D" parent="seviye"]

[node name="zemin" type="StaticBody2D" parent="seviye/duvarlar"]
position = Vector2( -6, 146 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="seviye/duvarlar/zemin"]
position = Vector2( 665, 7.5 )
shape = SubResource( 2 )

[node name="sol" type="StaticBody2D" parent="seviye/duvarlar"]
position = Vector2( -12, -710 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="seviye/duvarlar/sol"]
position = Vector2( 771.26, 39.9972 )
shape = SubResource( 1 )

[node name="sag" type="StaticBody2D" parent="seviye/duvarlar"]
position = Vector2( 1113, -699 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="seviye/duvarlar/sag"]
position = Vector2( 723.019, -1.00964 )
shape = SubResource( 1 )

[node name="Alisa" parent="seviye" instance=ExtResource( 6 )]
position = Vector2( 1101.91, 89.2088 )

[node name="Tokad_yeme_anim" type="AnimationPlayer" parent="seviye"]
autoplay = "tokad_ye"
anims/RESET = SubResource( 3 )
anims/tokad_ye = SubResource( 4 )

[node name="AntogonistHit" type="Sprite" parent="seviye/Tokad_yeme_anim"]
position = Vector2( 159, 103.625 )
scale = Vector2( 3.0579, 3.25 )
texture = ExtResource( 7 )
flip_h = true
hframes = 8
frame = 1

[node name="AntogonistWalk" type="Sprite" parent="seviye/Tokad_yeme_anim"]
position = Vector2( 184, 104 )
scale = Vector2( 3.27206, 3.27206 )
texture = ExtResource( 8 )
hframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="seviye/Tokad_yeme_anim/AntogonistWalk"]
autoplay = "walk"
anims/RESET = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="seviye"]
root_node = NodePath("../BuBenimOykum")
anims/animasyon = SubResource( 8 )

[node name="BuBenimOykum" type="Sprite" parent="seviye"]
position = Vector2( 1144.38, 44.1285 )
scale = Vector2( 3.32152, 3.32152 )
texture = ExtResource( 9 )
hframes = 7
vframes = 7
frame = 1

[node name="ev_ile_etkiles" type="Area2D" parent="seviye"]
position = Vector2( 1063.37, 98.3642 )
script = ExtResource( 10 )

[node name="col" type="CollisionShape2D" parent="seviye/ev_ile_etkiles"]
position = Vector2( -19.2666, -12.6804 )
shape = SubResource( 9 )

[node name="SagEvDsYeni" type="Sprite" parent="seviye/ev_ile_etkiles"]
visible = false
position = Vector2( 100.905, -80.828 )
scale = Vector2( 3.322, 3.322 )
texture = ExtResource( 12 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sahnegecisi" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false

[connection signal="body_entered" from="seviye/ev_ile_etkiles" to="seviye/ev_ile_etkiles" method="_on_ev_ile_etkiles_body_entered"]
